column problem with the output, input overflow fixed. Replace function error also fixed to my knowledge

--- a/src/Calculator/index.css
+++ b/src/Calculator/index.css
@@ -2,6 +2,7 @@
 	text-align: center;
 	height: 75px;
 	border: 0px solid black;
+	overflow: hidden;
 }
 #input:focus {
 	outline: none;
@@ -29,4 +30,7 @@
 	line-height: 75px;
 	text-align: center;
 	background-color: white;
+}
+#results {
+	overflow: hidden;
 }
